snapshots/pull_request/closed.snap
---
source: src/main.rs
assertion_line: 673
info:
  author_name_length: 8
  colour_hex: "#89B4FA"
  description_length: 0
  title_length: 74
---
embeds:
  - author:
      icon_url: "https://avatars.githubusercontent.com/u/58985301?v=4"
      name: sgoudham
      url: "https://github.com/sgoudham"
    color: 9024762
    description: ~
    title: "[catppuccin-rfc/polybar] Pull request closed: #14 rockdove-20240921_181702"
    url: "https://github.com/catppuccin-rfc/polybar/pull/14"
